--- a/web-pos/index.html
+++ b/web-pos/index.html
@@ -15,9 +15,6 @@
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <!-- Favicons -->
-
-
-
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -27,7 +24,6 @@
             -ms-user-select: none;
             user-select: none;
         }
-
         @media (min-width: 768px) {
             .bd-placeholder-img-lg {
                 font-size: 3.5rem;
@@ -67,7 +63,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a id="to-align" class="nav-link" href="#">
                             <span data-feather="file"></span>
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-people-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
@@ -112,7 +108,37 @@
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2">Dashboard</h1>
             </div>
-            
+            <div class="text-center">
+                <div class="row">
+                    <div class="col-lg-7 col-md-6 col-sm-6 col-xs-12">
+                        <a href="https://demo.phppointofsale.com/index.php/customers">
+                            <div class="dashboard-stats" id="totalCustomers">
+                                <div class="left">
+                                    <h3 class="flatGreenc">11</h3>
+                                    <h4>Total Customers</h4>
+                                </div>
+                                <div class="right flatGreen">
+                                    <i class="ion fas fa-users"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-7 col-md-6 col-sm-6 col-xs-12">
+                        <a href="https://demo.phppointofsale.com/index.php/items">
+                            <div class="dashboard-stats">
+                                <div class="left">
+                                    <h3 class="flatRedc">29</h3>
+                                    <h4>Total Item Types</h4>
+                                </div>
+                                <div class="right flatRed">
+                                    <i class="icon ti-harddrive"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 </div>
