--- a/web-pos/index.html
+++ b/web-pos/index.html
@@ -68,7 +68,7 @@
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-people-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
                             </svg>
-                            Search Customers
+                            Manage Customers
                         </a>
                     </li>
                     <li class="nav-item">
@@ -111,31 +111,25 @@
             <div class="text-center">
                 <div class="row">
                     <div class="col-lg-7 col-md-6 col-sm-6 col-xs-12">
-                        <a href="https://demo.phppointofsale.com/index.php/customers">
                             <div class="dashboard-stats" id="totalCustomers">
                                 <div class="left">
                                     <h3 class="flatGreenc">11</h3>
                                     <h4>Total Customers</h4>
                                 </div>
                                 <div class="right flatGreen">
-                                    <i class="ion fas fa-users"></i>
                                 </div>
                             </div>
-                        </a>
                     </div>
 
                     <div class="col-lg-7 col-md-6 col-sm-6 col-xs-12">
-                        <a href="https://demo.phppointofsale.com/index.php/items">
                             <div class="dashboard-stats">
                                 <div class="left">
                                     <h3 class="flatRedc">29</h3>
                                     <h4>Total Item Types</h4>
                                 </div>
                                 <div class="right flatRed">
-                                    <i class="icon ti-harddrive"></i>
                                 </div>
                             </div>
-                        </a>
                     </div>
                 </div>
             </div>
