--- a/web-pos/managecustomer.html
+++ b/web-pos/managecustomer.html
@@ -12,8 +12,41 @@
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/style-customer.css" rel="stylesheet">
+    <style>
+        .input div{
+
+            height: 50px;
+            width: 200px;
+
+            background-color: #007bff;
+        }
+        .input{
+            display: flex;
+            position: relative;
+            width: 850px;
+            height: 30px;
+            align-content: space-between;
+            justify-content: space-between;
+        }
+        #btn{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 160px;
+            height: 100px;
+        }
+        #btn button{
+            width: 70px;
+            height: 25px ;
+        }
+
+
+
+    </style>
 </head>
 <body>
+
+
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">Web POS</a>
     <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,6 +59,7 @@
         </li>
     </ul>
 </nav>
+
 
 <div class="container-fluid">
     <div class="row">
@@ -41,7 +75,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             <span data-feather="file"></span>
-                            Manage Customer
+                            Manage Customers
                         </a>
                     </li>
                     <li class="nav-item">
@@ -65,22 +99,22 @@
                 </ul>
             </div>
         </nav>
-
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Manage Customer</h1>
+                <h1 class="h2">Manage Customers</h1>
             </div>
 
             <div class="input">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <input type="text" id="cid" name="customer-id" value="Enter Customer ID" >
+                <input type="text" id="cname" name="customer-name" value="Enter Name">
+                <input type="text" id="caddress" name="customer-address" value="Enter Address">
+                <input type="text" id="csalary" name="customer-salary" value="Enter Salary">
+            </div>
+            <div id="btn">
+                <button type="submit" id="btnSave" name="save">Save</button>
+                <button type="submit" id="btnUpdate" name="update">Update</button>
             </div>
 
-
-
-            <h6>Section title</h6>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
@@ -118,5 +152,7 @@
         </main>
     </div>
 </div>
+
+
 </body>
 </html>
