--- a/web-pos/managecustomer.html
+++ b/web-pos/managecustomer.html
@@ -12,40 +12,8 @@
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/style-customer.css" rel="stylesheet">
-    <style>
-        .input div{
-
-            height: 50px;
-            width: 200px;
-
-            background-color: #007bff;
-        }
-        .input{
-            display: flex;
-            position: relative;
-            width: 850px;
-            height: 30px;
-            align-content: space-between;
-            justify-content: space-between;
-        }
-        #btn{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 160px;
-            height: 100px;
-        }
-        #btn button{
-            width: 70px;
-            height: 25px ;
-        }
-
-
-
-    </style>
 </head>
 <body>
-
 
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">Web POS</a>
@@ -60,7 +28,6 @@
     </ul>
 </nav>
 
-
 <div class="container-fluid">
     <div class="row">
         <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
@@ -69,31 +36,37 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="#">
                             <span data-feather="home"></span>
-                            Dashboard <span class="sr-only">(current)</span>
+                            <form action="index.html" method="get">
+                                <button type="submit" id="btnDashboard" name="dashboard">Dashboard</button>
+                            </form>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            <span data-feather="file"></span>
-                            Manage Customers
+                            <form action="managecustomer.html" method="get">
+                            <button type="submit" id="btnCustomer" name="customer">Manage Customers</button>
+                            </form>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            <span data-feather="shopping-cart"></span>
-                            Item Details
+                            <form action="manageitems.html" method="get">
+                                <button type="submit" id="btnItem" name="item"> Item Details</button>
+                            </form>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            <span data-feather="users"></span>
-                            Search Order
+                            <form action="Searchorders.html" method="get">
+                                <button type="submit" id="btnSearch" name="search">Search Order</button>
+                            </form>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            <span data-feather="bar-chart-2"></span>
-                            Place Order
+                            <form action="placeorder.html" method="get">
+                                <button type="submit" id="btnPlaceOrder" name="placeOrder"> Place Order</button>
+                            </form>
                         </a>
                     </li>
                 </ul>
@@ -104,16 +77,18 @@
                 <h1 class="h2">Manage Customers</h1>
             </div>
 
-            <div class="input">
-                <input type="text" id="cid" name="customer-id" value="Enter Customer ID" >
-                <input type="text" id="cname" name="customer-name" value="Enter Name">
-                <input type="text" id="caddress" name="customer-address" value="Enter Address">
-                <input type="text" id="csalary" name="customer-salary" value="Enter Salary">
-            </div>
-            <div id="btn">
-                <button type="submit" id="btnSave" name="save">Save</button>
-                <button type="submit" id="btnUpdate" name="update">Update</button>
-            </div>
+            <form>
+                <div class="input">
+                    <input type="text" id="cid" name="customer-id" value="Enter Customer ID">
+                    <input type="text" id="cname" name="customer-name" value="Enter Name">
+                    <input type="text" id="caddress" name="customer-address" value="Enter Address">
+                    <input type="text" id="csalary" name="customer-salary" value="Enter Salary">
+                </div>
+                <div id="btn">
+                    <button type="submit" id="btnSave" name="save">Save</button>
+                    <button type="submit" id="btnUpdate" name="update">Update</button>
+                </div>
+            </form>
 
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
